--- a/myapp/templates/register.html
+++ b/myapp/templates/register.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <form method="POST">
-        {% csrf_token %} {{ form.as_p }}
-        <button type="submit">Submit</button>
+        {% csrf_token %} 
+        {{ form.as_p }}
+        <button type="submit">Register</button>
     </form>
 
 {% endblock %}
