--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -13,7 +13,7 @@ type subit is used to submit a form to the server
 -->
 <div class="jumbotron text-center">
 
-<h1>Hello {{name}}!</h1>
+<h1>Hello {{page}} {{name}}!</h1>
 <br> 
 <h2> Please Select your Coffee preferences</h2>
 
